kubernetes/apps/dev/harbor/app/httproute.yaml
# yaml-language-server: $schema=https://k8s-schemas.m00nlit.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
spec:
  hostnames:
    - harbor.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - kind: Service
          name: harbor-http
          port: 3000
